Korrektur site.baseurl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <h1><strong>This is the best Portfolio Project ever</strong></h1>
      <nav>
          <ul>
-             <li><a href="{{site.baseurl}}/index.html">Home</li>
+             <li><a href="{{site.baseurl}}">Home</li>
              <li><a href="{{site.baseurl}}/news.html">News</li>
       
                 
