--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 <h1><strong>This is the best Portfolio Project ever</strong></h1>
      <nav>
          <ul>
-             <li><a href="{{site.baseurl}}">Home</li>
-             <li><a href="{{site.baseurl}}/news.html">News</li>
+             <li><a href="{{site.baseurl}}">Home</a>/li>
+             <li><a href="{{site.baseurl}}/news.html">News</a></li>
       
                 
          </ul>
