--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
 
 <body>
     
-<h1><strong>This is the best Portfolio Project ever</strong></h1>
+<h1>This is the best Portfolio Project ever</h1>
      <nav>
          <ul>
-             <li><a href="{{site.baseurl}}">Home</a></li>
+             <li><a href="{{site.baseurl}}/">Home</a></li>
              <li><a href="{{site.baseurl}}/news.html">News</a></li>
       
                 
