--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 <h1>This is the best Portfolio Project ever</h1>
 <nav>
     <ul>
-        <li><a href="{{site.baseurl}}/">Home</a></li>
-        <li><a href="{{site.baseurl}}/news.html">News</a></li>
+        <li><a href="index.html>Home</a></li>
+        <li><a href="news.html">News</a></li>
 
         
     </ul>
