--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <h1>This is the best Portfolio Project ever</h1>
 <nav>
     <ul>
-        <li><a href="index.html>Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="news.html">News</a></li>
 
         
